2010-08-09  Thomas Adam <thomas@xteddy.org>
	* authors/index.php:
	* news/index.php:
	* doc/unstable:
	* documentation/manpages/unstable:
	Regenerated for 2.5.31 releae.

2010-05-09  Thomas Adam <thomas@xteddy.org>
	* authors/index.php:
	* news/index.php:
	* doc/unstable:
	* documentation/manpages/unstable:
	Regenerated for 2.5.30 releae.

2010-04-03  Thomas Adam <thomas@xteddy.org>
	* authors/index.php:
	* news/index.php:
	* doc/unstable:
	* documentation/manpages/unstable:
	Regenerated for 2.5.29 releae.

	* definitions.inc:
	Updated for 2.5.29 release.

2010-03-08  Thomas Adam <thomas@xteddy.org>
	
	* fvwm-cats/index.php:
	* fvwm-cats/mildred.jpg:
	* fvwm-cats/mildred.php:
	* fvwm-cats/small_mildred.jpg:
	Add in photo of Mildred.

2010-02-19    <despen@verizon.net>

	* authors/pictures/Dan_Espen.php: Fix link to personal web page.

2010-02-20  Thomas Adam  <thomas@xteddy.org>
	* authors/pictures/create_php.sh:
	* authors/pictures/Thomas_Adam.pgp:
	Fix typo from autogeneration.

2010-02-20  Thomas Adam  <thomas@xteddy.org>
	* authors/pictures/create_php.sh:
	* authors/pictures/index.php:
	* authors/pictures/Thomas_Adam.php:
	* authors/pictures/Thomas_Adam.jpg:
	* authors/pictures/Thomas_Adam_small.jpg:
	Add in a shameful photo of myself with a caught mackerel from 2009.

2010-02-19  Thomas Adam  <thomas@xteddy.org>
	* index.php:
	Update links for FvwmWiki and FvwmForums.

2009-09-20  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* authors/index.php:
	* news/index.php:
	* doc/unstable:
	* documentation/manpages/unstable:
	regenerated

	* definitions.inc:
	upated for 2.5.28 release

2009-03-14  Mikhael Goikhman  <migo@homemail.com>

	* documentation/dev_creating_rpms.php:
	update the list of optional packages, fix some links and wording

2009-02-23  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* definitions.inc:
	updated for 2.5.27 release

	* doc/manpages:
	regenerated man pages

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php: